# A2A-LlamaIndex-File-Chat-Agent

./: README.md  pyproject.toml
hosts/streamlit/: README.md  app.py  pyproject.toml  requirements.txt
